--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "language-ns",
   "main": "./lib/language-ns",
   "version": "0.0.0",
-  "description": "A short description of your package",
+  "description": "Atom package for NuSpeak Scripting language (Internally developed at Endroad)",
   "keywords": [
+    "nuspeak"
   ],
   "activationCommands": {
     "atom-workspace": "language-ns:toggle"
